使用 Colaboratory 建立

--- a/Algo_Basic_Data_Structure.ipynb
+++ b/Algo_Basic_Data_Structure.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOVz4ul4E1DTXCJCySHvzJ3",
+      "authorship_tag": "ABX9TyNvb6Nr2y5DXHedcCScwI1c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "\n",
         "Given a mini program, consisting of a list of stack operations of push, pop, and peek,\n",
         "return the resulting stack after the execution of the program.\n",
-        "Print out the top item in the stack when you get a peek instruction.\n",
+        "Print out the top item in the stack when you get a peek instruction....\n",
         "\n",
         "8\n",
         "push 3\n",
@@ -80,8 +80,7 @@
         "  program=[input() for _ in range(cnt)]\n",
         "  stack=execute(program)\n",
         "  print(' '.join(stack))\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "id": "dXIGixP2zwCB"
