使用 Colaboratory 建立

--- a/Algo_Basic_Data_Structure.ipynb
+++ b/Algo_Basic_Data_Structure.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNvb6Nr2y5DXHedcCScwI1c",
+      "authorship_tag": "ABX9TyN+pn9QkZGRqFobZcMGGbPf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Stack**\n",
+        "# **Stack**\n",
         "\n",
         "Given a mini program, consisting of a list of stack operations of push, pop, and peek,\n",
         "return the resulting stack after the execution of the program.\n",
@@ -84,6 +84,81 @@
       ],
       "metadata": {
         "id": "dXIGixP2zwCB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Queue**\n",
+        "\n",
+        "using python Deques\n",
+        "\n",
+        "Insert (or \"Push\"): Putting an item into the end of the queue.\n",
+        "\n",
+        "Peek: Look at the first item of the queue.\n",
+        "\n",
+        "Remove (or \"Pop\"): Remove the first item of the queue."
+      ],
+      "metadata": {
+        "id": "fXvyTndnsCWJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Deque操作**\n",
+        "\n",
+        "**添加元素:**\n",
+        "\n",
+        ".append(x): 將 x 添加到右端。\n",
+        "\n",
+        ".appendleft(x): 將 x 添加到左端。\n",
+        "\n",
+        "**移除元素:**\n",
+        "\n",
+        ".pop(): 移除並返回右端元素。\n",
+        "\n",
+        ".popleft(): 移除並返回左端元素。\n",
+        "\n",
+        "**擴展 deque:**\n",
+        "\n",
+        ".extend(iterable): 將 iterable 的元素添加到右端。\n",
+        "\n",
+        ".extendleft(iterable): 將 iterable 的元素添加到左端（注意：iterable 的元素將會逆序添加到左端）。\n",
+        "\n",
+        "其他操作:\n",
+        "\n",
+        ".rotate(n): 向右旋轉 deque n 步。如果 n 是負數，則向左旋轉。\n",
+        "\n",
+        ".clear(): 清空 deque。\n",
+        "\n",
+        ".count(x): 計算 deque 中元素 x 出現的次數。\n",
+        "\n",
+        ".index(x[, start[, stop]]): 返回第 x 個元素的位置（位於 start 和 stop 之間）。\n",
+        "\n",
+        ".insert(i, x): 在位置 i 插入元素 x。\n",
+        "\n",
+        ".remove(value): 移除第一個匹配到的 value。\n",
+        "\n",
+        ".reverse(): 將 deque 中的元素反向排列。"
+      ],
+      "metadata": {
+        "id": "0RVHJjSSuwCd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from collections import deque\n",
+        "from typing import List\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        ""
+      ],
+      "metadata": {
+        "id": "uBituogHsj1_"
       },
       "execution_count": null,
       "outputs": []
