使用 Colaboratory 建立

--- a/Algo_Basic_Data_Structure.ipynb
+++ b/Algo_Basic_Data_Structure.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN+pn9QkZGRqFobZcMGGbPf",
+      "authorship_tag": "ABX9TyMKPXDPI+qj36QyPG81M70B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -154,14 +154,55 @@
         "from collections import deque\n",
         "from typing import List\n",
         "\n",
+        "#input\n",
+        "#8\n",
+        "#push 3 push 7 push 20 peek pop push 0 push 4 pop\n",
+        "\n",
+        "def execute(program: List[str]) -> List[int]:\n",
+        "  queue=deque()\n",
+        "  for cmd in program:\n",
+        "    cmd=cmd.strip().split()\n",
+        "    if cmd[0]=='push':\n",
+        "      queue.append(cmd[1])\n",
+        "    elif cmd[0]=='pop':\n",
+        "        if len(queue)==0:\n",
+        "           print('queue is empty')\n",
+        "        else:\n",
+        "            queue.popleft()\n",
+        "    elif cmd[0] == 'peek':\n",
+        "        if len(queue)==0:\n",
+        "           print('queue is empty')\n",
+        "        else:\n",
+        "            print(queue[0])\n",
+        "  return queue\n",
+        "\n",
+        "\n",
         "if __name__ == '__main__':\n",
-        ""
+        "  cnt=int(input())\n",
+        "  program=[input() for _ in range(cnt)]\n",
+        "  queue=execute(program)\n",
+        "  print(' '.join(queue))\n",
+        "\n"
       ],
       "metadata": {
-        "id": "uBituogHsj1_"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uBituogHsj1_",
+        "outputId": "0d16d74b-534e-4ca5-b7b0-2236faf509f6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "push 5\n",
+            "5\n"
+          ]
+        }
+      ]
     }
   ]
 }
