使用 Colaboratory 建立

--- a/Sort.ipynb
+++ b/Sort.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMslssu2b/1wIgOR9KSlaGI",
+      "authorship_tag": "ABX9TyMbhRmjywIF0DZHDvzCESSZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Insertion sort:**\n",
+        "**Insertion sort:**  O(N^2)\n",
         "\n",
         "每次iteration 就把這次輪到的entry 插入前面排好的部分"
       ],
@@ -47,16 +47,16 @@
       "source": [
         "def InsertionSort(lst):\n",
         "  length=len(lst)\n",
-        "  #len 5: 1 2 3 4\n",
         "  for idx in range(1,length):\n",
         "    key=idx\n",
         "    for j in range(key-1,-1,-1):\n",
-        "      if lst[key]<lst[j]:\n",
+        "      if int(lst[key])<int(lst[j]):\n",
         "        lst[j],lst[key]=lst[key],lst[j]\n",
         "        key=j\n",
         "  return lst\n",
         "\n",
         "\n",
+        "#8 10 1 3 4 6 9 2 7 5\n",
         "if __name__ == '__main__':\n",
         "  lst=input()\n",
         "  lst=lst.split()\n",
@@ -68,10 +68,54 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "**Selection sort:**  O(N^2)\n",
+        "\n",
+        "每次iteration 從還沒有排序過的那堆裡面 找最小的 存在一個temp空間, 之後再把他放到未排序堆的頭"
+      ],
       "metadata": {
         "id": "w6TS0jTh58rR"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#for i, entry in enumerate(unsorted_list):\n",
+        "def SelectionSort(lst):\n",
+        "  length=len(lst)\n",
+        "  minidx=0\n",
+        "  for start in range(length):\n",
+        "    minidx=start\n",
+        "    for idx in range(start,length):\n",
+        "      if int(lst[idx])<int(lst[minidx]):\n",
+        "        minidx=idx\n",
+        "    if minidx!=start:\n",
+        "      lst[start],lst[minidx]=lst[minidx],lst[start]\n",
+        "  return lst\n",
+        "\n",
+        "if __name__=='__main__':\n",
+        "  lst=[x for x in input().split()]\n",
+        "  sortlist=SelectionSort(lst)\n",
+        "  print(' '.join(lst))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V3Vyyuscag-3",
+        "outputId": "b3a8ee80-a517-4723-bded-22a88cc837eb"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8 10 1 3 4 6 9 2 7 5\n",
+            "1 2 3 4 5 6 7 8 9 10\n"
+          ]
+        }
+      ]
     }
   ]
 }
