使用 Colaboratory 建立

--- a/Sort.ipynb
+++ b/Sort.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLLhi7J66sNWaRLFTLXAs4",
+      "authorship_tag": "ABX9TyO7rXiZxPeDPfABNK0bWjRs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -221,10 +221,10 @@
       ],
       "metadata": {
         "id": "jAnFtYwbsaMB",
-        "outputId": "270102bf-3022-414d-c3bd-5199b51d1eb6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "270102bf-3022-414d-c3bd-5199b51d1eb6"
       },
       "execution_count": 25,
       "outputs": [
@@ -246,6 +246,75 @@
       "metadata": {
         "id": "CJHaUI5kfNQB"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def QuickSort(lst):\n",
+        "\n",
+        "\n",
+        "  return sortlist\n",
+        "\n",
+        "\n",
+        "if __name__ =='__main__':\n",
+        "  lst=[int(x) for x in input().split()]\n",
+        "  sortlist=QuickSort(lst)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Ikkzm7J_CVQ7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from typing import List\n",
+        "\n",
+        "def sort_list_interval(unsorted_list: List[int], start: int, end: int) -> None:\n",
+        "    # If segment is 1 or 0, it's sorted\n",
+        "    if end - start <= 1:\n",
+        "        return\n",
+        "\n",
+        "    # Using last element as the pivot\n",
+        "    pivot = unsorted_list[end - 1]\n",
+        "    start_ptr, end_ptr = start, end - 1\n",
+        "\n",
+        "    # Partitioning process\n",
+        "    while start_ptr < end_ptr:\n",
+        "        # Find the next element from the left that is larger than the pivot\n",
+        "        while unsorted_list[start_ptr] < pivot and start_ptr < end_ptr:\n",
+        "            start_ptr += 1\n",
+        "\n",
+        "        # Find the next element from the right that is smaller than or equal to the pivot\n",
+        "        while unsorted_list[end_ptr] >= pivot and start_ptr < end_ptr:\n",
+        "            end_ptr -= 1\n",
+        "\n",
+        "        # Swap if pointers haven't met\n",
+        "        unsorted_list[start_ptr], unsorted_list[end_ptr] = unsorted_list[end_ptr], unsorted_list[start_ptr]\n",
+        "\n",
+        "    # Place pivot in its final position\n",
+        "    unsorted_list[start_ptr], unsorted_list[end - 1] = unsorted_list[end - 1], unsorted_list[start_ptr]\n",
+        "\n",
+        "    # Sort left and right of the pivot\n",
+        "    sort_list_interval(unsorted_list, start, start_ptr)\n",
+        "    sort_list_interval(unsorted_list, start_ptr + 1, end)\n",
+        "\n",
+        "def sort_list(unsorted_list: List[int]) -> List[int]:\n",
+        "    sort_list_interval(unsorted_list, 0, len(unsorted_list))\n",
+        "    return unsorted_list\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    unsorted_list = [int(x) for x in input().split()]\n",
+        "    res = sort_list(unsorted_list)\n",
+        "    print(' '.join(map(str, res)))"
+      ],
+      "metadata": {
+        "id": "xDXLpCI2CZhi"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
